--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
     "cra-template": "1.2.0",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.14",
+    "motion": "^12.23.24",
+    "ogl": "^1.0.11",
     "pdfjs-dist": "^3.11.174",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
