--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cra-template": "1.2.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.14",
+    "matter-js": "^0.20.0",
     "motion": "^12.23.24",
     "ogl": "^1.0.11",
     "pdfjs-dist": "^3.11.174",
